--- a/share/new-device/new-device.in
+++ b/share/new-device/new-device.in
@@ -8,7 +8,7 @@ cat << EOS
 Usage: $(basename "$0") [options]
 
 Options:
-  -p,--prefix        Perfix that points to the installation directory
+  -p,--prefix        Perfix that points to the directory path to which files are output
                      (default = <current working directory>/my-nestdaq-device)
   -d,--device        Device name. 
                      If there are multiple devices, use "A;B;C" like in a cmake list.
