--- a/share/new-device/new-device.in
+++ b/share/new-device/new-device.in
@@ -1,6 +1,7 @@
 #!/usr/bin/env bash
 
-PREFIX=$(pwd)/my-nestdaq-device
+PREFIX=$(pwd)/my_nestdaq_device
+PROJECT=""
 DEVICE=""
 
 print_help() {
@@ -8,9 +9,10 @@ cat << EOS
 Usage: $(basename "$0") [options]
 
 Options:
-  -p,--prefix        Perfix that points to the directory path to which files are output
-                     (default = <current working directory>/my-nestdaq-device)
-  -d,--device        Device name. 
+  --prefix           Perfix that points to the directory path to which files are output
+                     (default = <current working directory>/my_nestdaq_device)
+  --project          Project name.
+  --device           Device name. 
                      If there are multiple devices, use "A;B;C" like in a cmake list.
   -h,--help          Show this help message
 EOS
@@ -29,6 +31,14 @@ while [[ $# -gt 0 ]]; do
       ;;
     --prefix=*)
       PREFIX="${1#*=}"
+      shift
+      ;;
+    --project)
+      PROJECT="$2"
+      shift 2
+      ;;
+    --project=*)
+      PROJECT="${1#*=}"
       shift
       ;;
     -d|--device)
@@ -70,5 +80,6 @@ fi
 #echo \
 cmake \
   -DCMAKE_INSTALL_PREFIX=${PREFIX} \
+  -DProject=${PROJECT} \
   -DDevice=${DEVICE} \
   -P @CMAKE_INSTALL_FULL_DATADIR@/new-device/create_skeleton_device.cmake
