--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,22 +18,15 @@ endif()
 
 #------------------------------------------------------------------------------
 # C++ standard level
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(MY_CXX_STANDARD 17)
-if(NOT CMAKE_CXX_STANDARD)
-  set(CMAKE_CXX_STANDARD ${MY_CXX_STANDARD})
-elseif(${CMAKE_CXX_STANDARD} LESS ${MY_CXX_STANDARD})
-  message(FATAL_ERROR "A minimum CMAKE_CXX_STANDARD of ${MY_CXX_STANDARD} is required.")
-elseif(${CMAKE_CXX_STANDARD} GREATER ${MY_CXX_STANDARD})
-  message(WARNING "A CMAKE_CXX_STANDARD of ${CMAKE_CXX_STANDARD} (greater than ${MY_CXX_STANDARD}) is not tested. Use on your on risk.")
-endif()
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wshadow -Wfloat-equal")
-set(CMAKE_CXX_FLAGS_RELEASE "-Ofast -DNDEBUG -march=native")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Ofast -DNDEBUG -march=native")
 message("")
 message("CMAKE_CXX_FLAGS:                ${CMAKE_CXX_FLAGS}")
 message("CMAKE_CXX_FLAGS_DEBUG:          ${CMAKE_CXX_FLAGS_DEBUG}")
@@ -57,71 +50,15 @@ find_package(Threads REQUIRED)
 #------------------------------------------------------------------------------
 # RPATH handling
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
-list(FIND CMAKE_PLATFORM_IMPLICIT_LINK_DIRECTORIES "${CMAKE_INSTALL_PREFIX/${CMAKE_INSTALL_LIBDIR}}" isSystemDir)
-if("${isSystemDir}" STREQUAL "-1")
-  if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
-    set(CMAKE_EXE_LINKER_FLAGS    "${CMAKE_EXE_LINKER_FLAGS} -Wl,--enable-new-dtags")
-    set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--enable-new-dtags")
-    set(CMAKE_INSTALL_RPATH       "$ORIGIN/../${CMAKE_INSTALL_LIBDIR}")
-  elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
-    set(CMAKE_INSTALL_RPATH "@loader_path/../${CMAKE_INSTALL_LIBDIR}")
-  else()
-    set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}")
-  endif()
-endif()
-
+set(CMAKE_BUILD_WIDTH_INSTALL_RPATH TRUE)
 message("CMAKE_EXE_LINKER_FLAGS:    ${CMAKE_EXE_LINKER_FLAGS}")
 message("CMAKE_SHARED_LINKER_FLAGS: ${CMAKE_SHARED_LINKER_FLAGS}")
 
 #------------------------------------------------------------------------------
-# set up FairMQ and Boost
-find_package(FairMQ)
-
-if(FairMQ_FOUND)
-  message(STATUS "FairMQ found")
-  message(STATUS "FairMQ_VERSION:              ${FairMQ_VERSION}")
-  message(STATUS "FairMQ_GIT_VERSION:          ${FairMQ_GIT_VERSION}")
-  message(STATUS "FairMQ_PACKAGE_DEPENDENCIES: ${FairMQ_PACKAGE_DEPENDENCIES}")
-  message(STATUS "FairMQ_PACKAGE_COMPONENTS:   ${FairMQ_PACKAGE_COMPONENTS}")
-  message(STATUS "FairMQ_PREFIX:               ${FairMQ_PREFIX}")
-  message(STATUS "FairMQ_BINDIR:               ${FairMQ_BINDIR}")
-  message(STATUS "FairMQ_INCDIR:               ${FairMQ_INCDIR}")
-  message(STATUS "FairMQ_LIBDIR:               ${FairMQ_LIBDIR}")
-  message(STATUS "FairMQ_DATADIR:              ${FairMQ_DATADIR}")
-  message(STATUS "FairMQ_CMAKEMODDIR:          ${FairMQ_CMAKEMODDIR}")
-  message(STATUS "FairMQ_BUILD_TYPE:           ${FairMQ_BUILD_TYPE}")
-  message(STATUS "FairMQ_CXX_FLAGS:            ${FairMQ_CXX_FLAGS}")
-
-  foreach(dep IN LISTS FairMQ_PACKAGE_DEPENDENCIES)
-    if(FairMQ_${dep}_COMPONENTS)
-      message(" dep: ${dep}")
-      message("  FairMQ_${dep}_version:    ${FairMQ_${dep}_VERSION}")
-      message("  FairMQ_${dep}_COMPONENTS: ${FairMQ_${dep}_COMPONENTS}")
-      if(${dep} MATCHES "Boost")
-        find_package(${dep} ${FairMQ_${dep}_VERSION} COMPONENTS ${FairMQ_${dep}_COMPONENTS}; iostreams; thread;)
-      else()
-        find_package(${dep} ${FairMQ_${dep}_VERSION} COMPONENTS ${FairMQ_${dep}_COMPONENTS};)
-      endif()
-    else()
-      message(" dep: ${dep}")
-      message("  FairMQ_${dep}_VERSION: ${FairMQ_${dep}_VERSION}")
-      find_package(${dep} ${FairMQ_${dep}_VERSION})
-    endif()
-  endforeach()
-else()
-  message(WARNING "FairMQ not found")
-endif()
-
-
-message(STATUS "Boost_INCLUDE_DIRS: ${Boost_INCLUDE_DIRS}")
-message(STATUS "Boost_LIBRARY_DIRS: ${Boost_LIBRARY_DIRS}")
-message(STATUS "Boost_LIBRARIES:    ${Boost_LIBRARIES}")
-
-if(NOT FairLogger_INCDIR)
-  set(FairLogger_INCDIR "${FairMQ_INCDIR}/fairlogger/bundled")
-endif()
-message(STATUS "FairLogger_INCDIR: ${FairLogger_INCDIR}")
-message(STATUS "FairLogger_LIBDIR: ${FairLogger_LIBDIR}")
+incldue(cmake/Boost.cmake)
+incldue(cmake/ZeroMQ.cmake)
+include(cmake/FairLogger.cmake)
+include(cmake/FairMQ.cmake)
 
 
 #------------------------------------------------------------------------------
