--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,7 @@ find_package(Threads REQUIRED)
 
 include(cmake/ZeroMQ.cmake)
 include(cmake/Boost.cmake)
-# include(cmake/FairLogger.cmake)
+include(cmake/FairLogger.cmake)
 # include(cmake/FairMQ.cmake)
 # 
 # 
