Added cmake files for simple build of external dendencies
Updated README.md and INSTALL.md

--- a/controller/CMakeLists.txt
+++ b/controller/CMakeLists.txt
@@ -45,8 +45,7 @@ target_link_directories(${EXEC} PUBLIC
   ${FairMQ_LIBDIR};
 )
 
-if ((FairMQ_VERSION VERSION_GREATER_EQUAL 1.8.0)
-  AND (FairMQ_VERSION VERSION_LESS_EQUAL 1.8.9))
+if (FairMQ_VERSION VERSION_GREATER_EQUAL 1.8.0)
   target_link_libraries(${EXEC} PUBLIC
     ${Boost_LIBRARIES};
     fairmq;
