--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -18,8 +18,7 @@ foreach(lvar IN ITEMS Sampler; Sink; NullDevice;)
     ${FairMQ_LIBDIR};
   )
 
-  if ((FairMQ_VERSION VERSION_GREATER_EQUAL 1.8.0)
-    AND (FairMQ_VERSION VERSION_LESS_EQUAL 1.8.9))
+  if (FairMQ_VERSION VERSION_GREATER_EQUAL 1.8.0)
     target_link_libraries(${EXEC} PUBLIC 
       ${Boost_LIBRARIES};  
       ${fmt_LIB};
